Implementado swagger en la rutas no protegidas y corregidos bugs en servicio y controladores
